[gd_scene load_steps=19 format=2]

[ext_resource path="res://import/model/character/base_character.glb" type="PackedScene" id=1]
[ext_resource path="res://import/model/items/1h_sword.glb" type="PackedScene" id=2]
[ext_resource path="res://import/model/character/run_loop.anim" type="Animation" id=3]
[ext_resource path="res://scripts/nodes/main_player.gd" type="Script" id=4]
[ext_resource path="res://resources/material/default.material" type="Material" id=5]
[ext_resource path="res://import/model/character/1h_attack.anim" type="Animation" id=6]
[ext_resource path="res://import/model/character/idle_loop.anim" type="Animation" id=7]
[ext_resource path="res://import/model/character/t_pose.anim" type="Animation" id=8]

[sub_resource type="AnimationNodeAnimation" id=1]
animation = "1h_attack"

[sub_resource type="AnimationNodeOneShot" id=2]

[sub_resource type="AnimationNodeAnimation" id=3]
animation = "idle_loop"

[sub_resource type="AnimationNodeTimeScale" id=4]

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "run_loop"

[sub_resource type="AnimationNodeTimeScale" id=6]

[sub_resource type="AnimationNodeBlend2" id=7]

[sub_resource type="AnimationNodeBlendTree" id=8]
graph_offset = Vector2( -471, 28 )
nodes/1h_attack_animation/node = SubResource( 1 )
nodes/1h_attack_animation/position = Vector2( -120, 460 )
nodes/attack/node = SubResource( 2 )
nodes/attack/position = Vector2( 440, 300 )
nodes/idle_animation/node = SubResource( 3 )
nodes/idle_animation/position = Vector2( -340, 140 )
nodes/idle_scale/node = SubResource( 4 )
nodes/idle_scale/position = Vector2( -60, 120 )
nodes/output/position = Vector2( 960, 300 )
nodes/run_animation/node = SubResource( 5 )
nodes/run_animation/position = Vector2( -340, 300 )
nodes/run_scale/node = SubResource( 6 )
nodes/run_scale/position = Vector2( -60, 300 )
nodes/speed/node = SubResource( 7 )
nodes/speed/position = Vector2( 180, 220 )
node_connections = [ "speed", 0, "idle_scale", "speed", 1, "run_scale", "output", 0, "attack", "run_scale", 0, "run_animation", "idle_scale", 0, "idle_animation", "attack", 0, "speed", "attack", 1, "1h_attack_animation" ]

[sub_resource type="CylinderShape" id=9]
radius = 0.300838
height = 1.77735

[sub_resource type="BoxShape" id=10]
extents = Vector3( 0.5, 0.8, 0.5 )

[node name="MainPlayer" type="KinematicBody" groups=[
"Targetable",
]]
collision_layer = 4
script = ExtResource( 4 )
move_speed = 30.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Body/Model/base_character")
anims/1h_attack = ExtResource( 6 )
anims/idle_loop = ExtResource( 7 )
anims/run_loop = ExtResource( 3 )
anims/t_pose = ExtResource( 8 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 8 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/attack/active = false
parameters/idle_scale/scale = 1.0
parameters/run_scale/scale = 1.5
parameters/speed/blend_amount = 0.0

[node name="CollisionBody" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.887, 0 )
shape = SubResource( 9 )

[node name="Body" type="Spatial" parent="."]

[node name="Model" type="Spatial" parent="Body"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 0 )

[node name="base_character" parent="Body/Model" instance=ExtResource( 1 )]

[node name="Body" parent="Body/Model/base_character/BodyArmature/Skeleton" index="0"]
material/0 = ExtResource( 5 )

[node name="HandRAttachment" type="BoneAttachment" parent="Body/Model/base_character/BodyArmature/Skeleton" index="1"]
transform = Transform( -0.213198, 0.0458579, 0.975933, 0.96495, 0.166345, 0.202982, -0.153033, 0.985001, -0.079715, -0.251836, 0.35221, 0.0488991 )
bone_name = "hand_attachment_r"

[node name="1h_sword" parent="Body/Model/base_character/BodyArmature/Skeleton/HandRAttachment" instance=ExtResource( 2 )]

[node name="WallRayCast" type="RayCast" parent="."]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0.4, 0 )
enabled = true
cast_to = Vector3( 0, 0, 0.85 )

[node name="InteractionArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.304004 )
input_ray_pickable = false
monitorable = false
collision_layer = 0
collision_mask = 14

[node name="CollisionShape" type="CollisionShape" parent="InteractionArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, -0.5 )
shape = SubResource( 10 )

[node name="DebugCamera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.896857, 0.44232, 0, -0.44232, 0.896857, 0, 2.32578, 2.32502 )
visible = false

[editable path="Body/Model/base_character"]
